test/functions/iterators/vass/const-ref-iterator-1.good
const-ref-iterator-1.chpl:10: error: cannot yield a const 'globalVar' from a (non-const) ref iterator
const-ref-iterator-1.chpl:11: error: cannot yield a const reference from a (non-const) ref iterator
